<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/portTextView"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:text="@string/port_text_view"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ipTextView"
        app:layout_constraintStart_toStartOf="@+id/ipTextView"
        app:layout_constraintTop_toBottomOf="@+id/ipTextView" />

    <TextView
        android:id="@+id/ipTextView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/ip_text_view"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ipPlainText"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ipPlainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/ip_plain_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ipTextView"
        app:layout_constraintTop_toTopOf="@+id/ipTextView"
        tools:ignore="AutoFill"/>

    <EditText
        android:id="@+id/portPlainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/port_plain_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ipPlainText"
        app:layout_constraintStart_toStartOf="@+id/ipPlainText"
        app:layout_constraintTop_toTopOf="@+id/portTextView"
        tools:ignore="AutoFill"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="connectButtonClick"
        android:text="@string/connect_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>